--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -28,9 +28,9 @@
         display: none;
     }
 
-    h1 {
+    /* h1 {
         margin: 160px 10vw;
-    }
+    } */
 
     .productFeature{
         display: flex;
