--- a/css/footer.css
+++ b/css/footer.css
@@ -6,6 +6,11 @@ footer {
     flex-direction: row;
      align-items: center;
     justify-content: space-between;
+	background-color: var(--ui-black);
+	color: var(--ui-white);
+	padding: 128px 64px;
+	margin: 0;
+	margin-top: 128px;
 }
 
 
