--- a/css/global.css
+++ b/css/global.css
@@ -8,18 +8,32 @@
 
 body {
     font-family: 'Space Grotesk', sans-serif;
-    font-size: min(max(1rem, 4vw), 22px);
+    font-size: min(max(1rem, 4vw), 18px);
     font-weight: 400;
+    margin: 0;
+    padding: 0;
 }
 
 h1 {
-    font-size: min(max(3.5rem, 4vw), 72px);
-    font-weight: 500;
-    line-height: 88px;
-    text-align: center;
-    margin: 80px 20vw;
-    max-width: 60vw
+  font-size: min(max(3.5rem, 8vw), 96px);
+  font-weight: 500;
+  line-height: 128px;
+  /* max-width: 45vw; */
+  padding-left: 64px;
+  /* margin-top: 128px;
+  margin-bottom: 128px; */
+  max-width: 50vw;
 }
+
+
+/* h1 {
+  font-size: min(max(3.5rem, 4vw), 72px);
+  font-weight: 500;
+  line-height: 88px;
+  padding-left: 64px;
+  margin-top: 128px;
+  margin-bottom: 128px;
+} */
 
 h2 {
     font-size: min(max(3rem, 4vw), 64px);
@@ -48,11 +62,10 @@ h5 {
 }
 
 h6 {
-    font-size: min(max(1.375rem, 4vw), 32px);
+    font-size: min(max(1.375rem, 4vw), 24px);
     font-weight: 500;
     margin: 0;
     padding: 0;
-    margin-bottom: 12px;
     color: var(--ui-black);
 }
 
@@ -64,7 +77,7 @@ h6 {
 }
 
 p {
-    font-size: min(max(1rem, 4vw), 22px);
+    font-size: min(max(1rem, 4vw), 18px);
     font-weight: 400;
     line-height: 27px;
     letter-spacing: 0em;
@@ -132,8 +145,9 @@ li {
     display: flex;
     flex-direction: column;
     align-items: center;
-    row-gap: 240px;
-    margin: 80px 0px 240px 0px;
+    row-gap: 96px;
+    /* margin: 80px 0px 240px 0px; */
+    padding: 0px 64px;
 }
 /* =============== PRODUCT ===============  */
 .productFlex {
