--- a/css/filter.css
+++ b/css/filter.css
@@ -34,7 +34,7 @@
   }
 
   section > img {
-    width: 100%;
+    width: 31vw;
     height: auto;
     transition: transform 0.5s;
     border: 1px solid #f2f2f2;
